_ERRORS-log.txt
[1:32:23 PM] % pnpm start

> engraving-processor-pro@1.0.0 start /Users/erst/Library/CloudStorage/Dropbox/Websites/x
> node server.js

file:///Users/erst/Library/CloudStorage/Dropbox/Websites/x/server.js:4
import { wsManager } from "./build/server/index.js";
         ^^^^^^^^^
SyntaxError: The requested module './build/server/index.js' does not provide an export named 'wsManager'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:182:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:266:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.16.0
 ELIFECYCLE  Command failed with exit code 1.
[1:38:56 PM] % 
